# solana-riptide-2022

./: README.md
circom-circuits/: .gitignore  README.md  multiplier2.circom  snarkjs-0.4.15.tgz
circom-circuits/scripts/: all.bash  ceremony.bash  compile.bash  proof.bash  witness.bash
getrandom/src/: lib.rs
snarkjs/: package-lock.json  package.json
snarkjs/templates/: verifier_groth16_solana.rs.ejs
solana-verifier/: Anchor.toml  Cargo.toml  README.md  package.json
solana-verifier/programs/solana-verifier/: Cargo.toml
solana-verifier/programs/solana-verifier/src/: lib.rs  verifier.rs
solana-verifier/tests/: solana-verifier.ts
